msm8974-common: overlay: config: add gps config overlay
Android now reads gps config from resources, and the default values do not work for sony devices.
Override the defaults with values that work on sony devices.

Change-Id: Ic1f1f7427d5747205e1a9cd2566473fba0f88d32

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -165,5 +165,13 @@
          config to 7. -->
     <integer name="config_deviceHardwareWakeKeys">32</integer>
 
->>>>>>> e726fa2... msm8974: overlay: remove unsupported LED overlays
+    <!-- Values for GPS configuration -->
+    <string-array translatable="false" name="config_gpsParameters">
+        <item>SUPL_HOST=supl.sonyericsson.com</item>
+        <item>SUPL_PORT=7275</item>
+        <item>SUPL_MODE=1</item>
+        <item>SUPL_VER=0x20000</item>
+        <item>LPP_PROFILE=2</item>
+        <item>A_GLONASS_POS_PROTOCOL_SELECT=2</item>
+    </string-array>
 </resources>
