--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -174,4 +174,9 @@
         <item>LPP_PROFILE=2</item>
         <item>A_GLONASS_POS_PROTOCOL_SELECT=2</item>
     </string-array>
+
+    <!-- When true, the tethering upstream network follows the current default
+     Internet network (except when the current default network is mobile,
+     in which case a DUN network will be used if required). -->
+  <bool translatable="false" name="config_tether_upstream_automatic">true</bool>
 </resources>
